Some minor improvements: Cache values (increased speed), give a timestamp in the detail view, convert everything to the accoring values (i.e. string -> float)

--- a/index.html
+++ b/index.html
@@ -62,5 +62,10 @@ github@jdede.de
       <span id="data" style="border-style: none; padding: 10px;">No data received yet</span>
     </p>
     <button type="button" onclick="getData('/json')">update</button>
+
+    <ul>
+      <li><a href="/json"><code>/json</code></a></li>
+      <li><a href="/detailjson"><code>/detailjson</code></a></li>
+    </ul>
   </body>
 </html>
